[FIX] sap.m.TabStrip, sap.m.TabContainer: close button icon is aligned
SNOW: DINC0869619

--- a/src/sap.m/src/sap/m/themes/base/TabStrip.less
+++ b/src/sap.m/src/sap/m/themes/base/TabStrip.less
@@ -265,7 +265,7 @@ html .sapMTabStripSelectListItemCloseBtn .sapMBtnInner {
 	margin: 0 auto;
 }
 
-.sapMTabStripSelectListItemCloseBtn .sapMBtnIcon {
+.sapMTabStripSelectListItemCloseBtn .sapMBtnIcon.sapUiIcon {
 	line-height: 1.45rem;
 	width: 100%;
 	height: 100%;
